Use URI.toURL instead of deprecated constructor
Signed-off-by: saeltz <bendix@saeltz.de>